--- a/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecific.scss
+++ b/frontend/army_mentoring/src/components/Routes/MyMentoring/MentoringSpecific.scss
@@ -14,12 +14,14 @@
 		background-color: $secondary;
 		border-radius: 0px 30px 30px 30px;
 		padding: 30px;
+		
 		.mentor-content {
+			margin-left: 10%;
 			img {
 				display: block;
-				width: 300px;
+				width: 450px;
 				height: 300px;
-				border: 1px solid $black;
+				border-radius: 30px;
 			}
 			a {
 				text-decoration: none;
@@ -41,9 +43,9 @@
 				justify-content: center;
 				height: 90%;
 				h2 {
-					font-weight: bold;
+					
 					color: $white;
-					font-size: 50px;
+					font-size: 4rem;
 				}
 				.during {
 					font-size: 30px;
