[update] : 본인의 좋아요 빨간색 하이라이팅, editprofile 버튼 스타일개선

--- a/frontend/army_mentoring/src/components/Routes/Community/community.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/community.scss
@@ -77,6 +77,9 @@
             filter: grayscale(40%);
         }
     }
+    .pushed{
+        color:red;
+    }
 }
 @mixin communityLikes{
     border: 1px solid $gray3;
