--- a/frontend/army_mentoring/src/components/Routes/Community/Article.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/Article.scss
@@ -10,6 +10,9 @@
         @include communityContent;
     }
     .community_statistics {
+		.pushed{
+			color:red;
+		}
         @include communityStatistics;
     }
 	.pushed{
