--- a/frontend/army_mentoring/src/components/Routes/preset.scss
+++ b/frontend/army_mentoring/src/components/Routes/preset.scss
@@ -10,6 +10,7 @@ $gray1 : #3F3F3F;
 $gray2 : #A3A3A3;
 $gray3 : #D4D4D4;
 $gray4 : #F0F0F0;
+$red : #cf2a2a;
 
 /* 본문용 한글, 영어 폰트 (일반적인 폰트)
 Noto Sans KR : Open Font License
