[update] : code factor issue 해결

--- a/frontend/army_mentoring/src/components/Header/Header.scss
+++ b/frontend/army_mentoring/src/components/Header/Header.scss
@@ -36,4 +36,11 @@ li{
         color:$gray3;
     }
   }
+  span{
+    color:$tertiary;
+    cursor:pointer;
+    &:hover{
+        color:$gray3;
+    }
+  }
 }
